--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-<link rel="stylesheet" type="text/CSS" href="mystyles.css">
+<link rel="style.css" type="text/CSS" href="mystyles.css">
 
  <title>tf2website</title>
   
@@ -17,4 +17,5 @@
 
 
 </body>
+
 </html>
