--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-<link rel="style.css" type="text/CSS" href="mystyles.css">
+<link rel="style.css" type="text/CSS" href="style.css">
 
  <title>tf2website</title>
   
@@ -19,3 +19,4 @@
 </body>
 
 </html>
+
