--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-<link rel="dial.css" type="text/CSS" href="dial.css">
+<link rel="stylesheet" type="text/CSS" href="dial.css">
 
  <title>tf2website</title>
   
@@ -19,6 +19,7 @@
 </body>
 
 </html>
+
 
 
 
